# MIT License
#
# Copyright (c) 2023 Vincent Smeets

# Autoconf requirements

# AC_INIT(package, version, bug-report-address)
AC_INIT([dsmr-server], [0.1.0], [dsmr-server@vsmeets.nl])
AM_INIT_AUTOMAKE

# information on the package

# checks for programs

# checks for libraries

# checks for header files

# checks for types

# checks for structures

# checks for compiler characteristics

# checks for library functions

# checks for system services

# AC_CONFIG_FILES([file…])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])

# AC_OUTPUT
AC_OUTPUT
