# MIT License
#
# Copyright (c) 2023 Vincent Smeets

# Autoconf requirements

# AC_INIT(package, version, bug-report-address)
AC_INIT([dsmr-server], [0.1.0], [dsmr-server@vsmeets.nl])
AC_CONFIG_MACRO_DIRS([m4])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_SRCDIR([src/dsmr_server.cc])
AC_CONFIG_HEADERS([config.h])
LT_INIT
AM_INIT_AUTOMAKE

# information on the package

# checks for programs
AC_PROG_CXX

# checks for libraries

# checks for header files

# checks for types

# checks for structures

# checks for compiler characteristics

# checks for library functions

# checks for system services

# AC_CONFIG_FILES([file…])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])

# AC_OUTPUT
AC_OUTPUT
